--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,27 @@
 services:
-  auth-app:
+  app:
     build:
       context: .
       dockerfile: docker/Dockerfile.App
     image: workmate-task:latest
-    container_name: auth-app
+    container_name: mate-app
     command: ./app
     restart: always
     ports:
       - "8080:8080"
+    env_file:
+      - .env
+    depends_on:
+      - redis
+
+  redis:
+    image: redis:7-alpine
+    container_name: mate-redis
+    restart: always
+    command: ["redis-server"]
+    volumes:
+      - redis-data:/data
+
+volumes:
+  redis-data:
+    driver: local
